--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.0",
+    "@angular/cdk": "^18.2.6",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
     "@angular/forms": "^18.1.0",
+    "@angular/material": "^18.2.6",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "angular-markdown-editor": "^3.1.1",
+    "clipboard": "^2.0.11",
+    "emoji-toolkit": "^9.0.1",
+    "katex": "^0.16.11",
+    "marked": "^12.0.2",
+    "mermaid": "^11.3.0",
+    "ngx-ace-wrapper": "^17.0.0",
+    "ngx-markdown": "^18.1.0",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
